--- a/pom.xml
+++ b/pom.xml
@@ -20,8 +20,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
-    <!-- parent project dependency all define in depedencyManagment
-    -->
+    <!-- parent project dependency all define in dependencyManagement  -->
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -32,5 +31,18 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+
+    <!-- separate dependency for modules -->
+    <!-- konkretnu verziju stavljamo u module-->
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
