--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,8 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <spring.boot.maven.plugin.version>3.1.5</spring.boot.maven.plugin.version>
+        <spring.boot.dependencies.version>3.1.5</spring.boot.dependencies.version>
     </properties>
 
     <!-- Moramo da stavimo i u child -->
@@ -26,7 +28,7 @@
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
-                <version>3.1.5</version>
+                <version>${spring.boot.dependencies.version}</version>
                 <scope>import</scope>
             </dependency>
         </dependencies>
