customer dependency - rest api

--- a/customer/pom.xml
+++ b/customer/pom.xml
@@ -17,4 +17,14 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+
+    <!-- in parent dependencyManagement is define spring boot
+    here define starter-web for rest api-->
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+    </dependencies>
+
 </project>
