fraud app setup

--- a/customer/src/main/resources/application.yml
+++ b/customer/src/main/resources/application.yml
@@ -14,5 +14,5 @@ spring:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: 'true'
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: create
     show-sql: true
