--- a/fraud/src/main/resources/application.yml
+++ b/fraud/src/main/resources/application.yml
@@ -4,3 +4,15 @@ server:
 spring:
   application:
     name: fraud
+  datasource:
+    username: 'branko'
+    password: '602984'
+    url: jdbc:postgresql://localhost:5432/fraud
+  jpa:
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+        format_sql: 'true'
+    hibernate:
+      ddl-auto: create
+    show-sql: true
