--- a/customer/src/main/resources/application.yml
+++ b/customer/src/main/resources/application.yml
@@ -13,5 +13,5 @@ spring:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: 'true'
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     show-sql: true
