--- a/eureka-server/pom.xml
+++ b/eureka-server/pom.xml
@@ -21,6 +21,7 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+            <version>3.0.3</version>
         </dependency>
     </dependencies>
 
