--- a/fraud/src/main/resources/application.yml
+++ b/fraud/src/main/resources/application.yml
@@ -17,6 +17,10 @@ spring:
       ddl-auto: create
     show-sql: true
 
+  zipkin:
+    base-url: http://localhost:9411
+
+
 eureka:
   client:
     service-url:
