--- a/notification/pom.xml
+++ b/notification/pom.xml
@@ -51,7 +51,7 @@
         </dependency>
         <dependency>
             <groupId>org.example</groupId>
-            <artifactId>clients</artifactId>
+            <artifactId>amqp</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
