--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,23 @@
                         </execution>
                     </executions>
                 </plugin>
+                <plugin>
+                    <groupId>com.google.cloud.tools</groupId>
+                    <artifactId>jib-maven-plugin</artifactId>
+                    <version>3.3.1</version>
+                    <configuration>
+                        <to>
+                            <image>registry.hub.docker.com/brankoscekic/${project.artifactId}</image>
+                            <auth>
+                                <username>brankoscekic</username>
+                                <password>savana0602984nana</password>
+                            </auth>
+                            <tags>
+                                <tag>latest</tag>
+                            </tags>
+                        </to>
+                    </configuration>
+                </plugin>
             </plugins>
         </pluginManagement>
         <plugins>
