--- a/eureka-server/src/main/resources/application-docker.yml
+++ b/eureka-server/src/main/resources/application-docker.yml
@@ -3,7 +3,7 @@ spring:
     name: eureka-server
 
   zipkin:
-    base-url: http://localhost:9411
+    base-url: http://zipkin:9411
 
 server:
   port: 8761
