--- a/fraud/src/main/resources/application-docker.yml
+++ b/fraud/src/main/resources/application-docker.yml
@@ -7,7 +7,7 @@ spring:
   datasource:
     username: 'branko'
     password: '602984'
-    url: jdbc:postgresql://localhost:5432/fraud
+    url: jdbc:postgresql://postgres:5432/fraud
   jpa:
     properties:
       hibernate:
@@ -18,12 +18,12 @@ spring:
     show-sql: true
 
   zipkin:
-    base-url: http://localhost:9411
+    base-url: http://zipkin:9411
 
 
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://eureka-server:8761/eureka
     fetch-registry: true
     register-with-eureka: true
