--- a/notification/src/main/resources/application-docker.yml
+++ b/notification/src/main/resources/application-docker.yml
@@ -6,7 +6,7 @@ spring:
     name: notification
   datasource:
     password: '602984'
-    url: jdbc:postgresql://localhost:5432/notification
+    url: jdbc:postgresql://postgres:5432/notification
     username: 'branko'
   jpa:
     hibernate:
@@ -18,15 +18,15 @@ spring:
     show-sql: true
 
   zipkin:
-    base-url: http://localhost:9411
+    base-url: http://zipkin:9411
 
   rabbitmq:
-    addresses: localhost:5672
+    addresses: rabbitmq:5672
 
 eureka:
   client:
     service-url:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://eureka-server:8761/eureka
     fetch-registry: true
     register-with-eureka: true
 
