--- a/customer/src/main/resources/application.yml
+++ b/customer/src/main/resources/application.yml
@@ -29,3 +29,4 @@ eureka:
       defaultZone: http://localhost:8761/eureka
     fetch-registry: true
     register-with-eureka: true
+    enabled: false
