--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,30 +46,30 @@ services:
     networks:
       - spring
 
-  eureka-server:
-    image: brankoscekic/eureka-server:latest
-    container_name: eureka-server
-    ports:
-      - "8761:8761"
-    environment:
-      - SPRING_PROFILES_ACTIVE=docker
-    networks:
-      - spring
-    depends_on:
-      - zipkin
+ # eureka-server:
+ #   image: brankoscekic/eureka-server:latest
+ #   container_name: eureka-server
+ #   ports:
+ #     - "8761:8761"
+ #   environment:
+ #     - SPRING_PROFILES_ACTIVE=docker
+ #   networks:
+ #     - spring
+ #   depends_on:
+ #     - zipkin
 
-  apigw:
-    image: brankoscekic/apigw:latest
-    container_name: apigw
-    ports:
-      - "8083:8083"
-    environment:
-      - SPRING_PROFILES_ACTIVE=docker
-    networks:
-      - spring
-    depends_on:
-      - zipkin
-      - eureka-server
+ # apigw:
+ #   image: brankoscekic/apigw:latest
+ #   container_name: apigw
+ #   ports:
+ #     - "8083:8083"
+ #   environment:
+ #     - SPRING_PROFILES_ACTIVE=docker
+ #   networks:
+ #     - spring
+ #   depends_on:
+ #     - zipkin
+ #     - eureka-server
 
   customer:
     image: brankoscekic/customer:latest
@@ -83,7 +83,6 @@ services:
       - postgres
     depends_on:
       - zipkin
-      - eureka-server
       - postgres
       - rabbitmq
 
@@ -99,7 +98,6 @@ services:
       - postgres
     depends_on:
       - zipkin
-      - eureka-server
       - postgres
       - rabbitmq
 
@@ -115,7 +113,6 @@ services:
       - postgres
     depends_on:
       - zipkin
-      - eureka-server
       - postgres
       - rabbitmq
 
